[package]
authors = ["Michael Neufeld <mj9eld@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "BSP for Adafruit Clue."
license = "MIT OR Apache-2.0"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
name = "adafruit-clue"
version = "0.0.1"
edition = "2018"

[dependencies]
nrf52840-hal = "0.15.1"
cortex-m = "0.7.4"
embedded-hal = "0.2.7"
cortex-m-rt = ">=0.6, <0.8"

[dev-dependencies]
nb = "1.0.0"
shared-bus = "0.2.4"
#defmt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }
#defmt-rtt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }

embedded-graphics = "0.7"
st7789 = "0.6.1"
display-interface = "0.4"
display-interface-spi = "0.4"
# gyro/accel
lsm6ds33 = "0.3.0"
# magnetometer
#lis3mdl = "0.1.0"
lis3mdl = { git = "https://github.com/ryanrightmer/lis3mdl" }
# prox/gesture/light
apds9960 = "0.1.0"
# humidity
#sht3x = "0.1.1"
sht3x = { git = "https://github.com/reitermarkus/sht3x-rs" }
# temp/pressure
bmp280-rs = "0.1.1"
#cortex-m-semihosting = "0.3.3"
#panic-halt = "0.2.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
#nrf-usbd = "0.1.1"
heapless = "0.7.9"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
