[package]
authors = ["Michael Neufeld <mj9eld@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "BSP for Adafruit Clue."
license = "MIT OR Apache-2.0"
keywords = ["arm", "cortex-m", "nrf52", "hal"]
name = "adafruit-clue"
version = "0.0.1"
edition = "2018"

[dependencies]
nrf52840-hal = "0.15.1"
embedded-hal = "0.2.7"

[dev-dependencies]
cortex-m = { version = "0.7.4", features = ["critical-section-single-core"] }
cortex-m-rt = ">=0.6, <0.8"
nb = "1.0.0"
shared-bus = "0.2.4"
heapless = "0.7.9"
# screen
embedded-graphics = "0.7"
st7789 = "0.6.1"
display-interface = "0.4"
display-interface-spi = "0.4"
# gyro/accel
lsm6ds33 = "0.3.0"
# magnetometer
lis3mdl = { git = "https://github.com/ryanrightmer/lis3mdl" }
# prox/gesture/light
apds9960 = "0.1.0"
# humidity
sht3x = { git = "https://github.com/reitermarkus/sht3x-rs" }
# temp/pressure
bmp280-rs = "0.1.1"
# usb
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[features]
nrf-s140-v6 = []
nrf-s140-v7 = []
rt = ["nrf52840-hal/rt"]
# To build this library standalone add either "nrf-s140-v6" or "nrf-s140-v7"
# to the default features. If you've got a stock Clue, then just use
# "nrf-s140-v6" - you'll only need the -v7 if you've actively reflashed
# with a bootloader containing version 7 of the S140 SoftDevice.
#default = ["rt"]
#default = ["rt","nrf-s140-v6"]
#default = ["rt","nrf-s140-v7"]


[profile.release]
strip = true  # Automatically strip symbols from the binary.
